--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+   <link href="assets/css/ui.css" rel="stylesheet">
+   <link href="assets/css/responsive.css" rel="stylesheet">
+  
+   <link href="assets/css/all.min.css" rel="stylesheet">
+   <script src="assets/js/jquery.min.js" type="text/javascript"></script>
+   <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
